# ckan-dv

src/.cookiecutter_replay/: ckan_extension.json
src/ckanext-test/: MANIFEST.in  README.md  pyproject.toml  setup.cfg
src/ckanext-test/.github/workflows/: test.yml
src/ckanext-test/ckanext/test/: plugin.py
src/ckanext-test/ckanext/test/templates/: header.html  home.html  my_template.html
src/ckanext-test/ckanext/test/tests/logic/: test_auth.py
