[project]
name = "ckanext-test"
version = "0.0.1"
description = "less"
readme = "README.md"
authors = [
    {name = "Gibs", email = "dc03@igp.gob.pe"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/Gigiorg/ckanext-test"

[project.entry-points."ckan.plugins"]
test = "ckanext.test.plugin:TestPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
